5.4.0 -> 5.4.1:
    - proyvind: update doxygen input filename paths.
    - proyvind: fix assertion error when trying to install packages without
	required permissions.
    - devzero2000: document --whatneeds and --needswhat
      (ref. https://bugzilla.redhat.com/show_bug.cgi?id=142651)
    - proyvind: fix an extremely subtle, corner-case memleak in parsePreamble.c
    - jbj: dreamplug: build options.
    - jbj: openmamba: explicit neon linkage isn't right solution, revert/todo++.
    - jbj: monga: build options.
    - jbj: openmamba: --with-neon=internal needs libs to be added explicitly
	to linkage.
    - mdawkins: applied vendor Openmamba patches
    - mdawkins: i18n update cs.po da.po de.po es.po fi.po fr.po id.po is.po it.po ja.po
		ko.po nb.po nl.po pa.po pl.po pt.po pt_BR.po ru.po sk.po sl.po sr.po sv.po tr.po
		uk.po vi.po zh_TW.po
    - devzero2000: permit in configure phase to 
      --enable-rpmvercmp-digits-beat-alpha for reverting to the old rpmvercmp 
      behavior where digits beat alpha as used by Mandriva, Fedora, Suse 
      and other (ref https://blueprints.launchpad.net/rpm/+spec/rpm-split-vendor-config-in-autofu)
    - jbj: mongo: adjust --json spewage to accomodate mongo syntax.
    - devzero2000: get rid of rindex everywhere: use SUSv3 strrchr instead
    - jbj: mongo: templating diddle-ups, use new Date(...) in other.mongo.
    - jbj: mongo: wire-up a per-spewage macro expansion, more todo++.
    - jbj: mongo: fix: iconv_open("UTF-8", "UTF-8//IGNORE") zero tolerance
	transform for encoding randomness, particularly in ancient %changelog's.
    - jbj: mongo: fix: JSON has no escaped single quote or vertical tab.
    - devzero2000: add more gpg keys to thkp.c test program
    - jbj: move multiarch* to mandriva.in.
    - jbj: put "devel(libfoo)" deps under RPM_VENDOR_MANDRIVA.
    - proyvind: merge multiarch-utils from mandriva.
    - proyvind: macros: sync with updated python macros from mandriva.